# devdocs-desktop

./: .gitignore  MANIFEST.in  setup.cfg
devdocs_desktop/: __init__.py  definitions.py  main.py
