[metadata]
name = devdocs-desktop
version = 0.1
author = Hardpixel Agile Development Studio
author_email = info@hardpixel.eu
description = DevDocs desktop application created with GTK3 and Python
url = https://github.com/hardpixel/devdocs-desktop
keywords =
  gtk
  devdocs
  python
  webkit
classifiers =
  Development Status :: 3 - Alpha
  Environment :: X11 Applications :: GTK
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: POSIX
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development :: Documentation
long_description = file: README.md
long_description_content_type = text/markdown
license = gpl3
platforms = Linux

[options]
zip_safe = False
include_package_data = True
packages = devdocs_desktop
python_requires = >=3.6
install_requires =
   dbus-python
   PyGObject

[options.entry_points]
console_scripts =
    devdocs-desktop = devdocs_desktop.main:run
